--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 //.env
 JWT_SECRET=somereallylongsecretkey
 JWT_GIFT_SECRET=tptteagiftcard
-NODE_ENV=development
-//NODE_ENV=production
+//NODE_ENV=development
+NODE_ENV=production
 DB_HOST=us-cdbr-iron-east-01.cleardb.net
 DB_USERNAME=be1c8631968f4b
 DB_PASSWORD=d5a71d86
