3rd commit change db info

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ JWT_SECRET=somereallylongsecretkey
 JWT_GIFT_SECRET=tptteagiftcard
 //NODE_ENV=development
 NODE_ENV=production
-DB_HOST=us-cdbr-iron-east-01.cleardb.net
-DB_USERNAME=be1c8631968f4b
+DB_HOST=103.130.216.111
+DB_USERNAME=phonglon_tpteauser
 DB_PASSWORD=d5a71d86
-DB_NAME=heroku_e199b2a8a8e231a
+DB_NAME=phonglon_tptea
 DEV_DB_HOST=localhost
 DEV_DB_USERNAME=root
 DEV_DB_PASSWORD=admin
