8th commit, test live db success

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ JWT_SECRET=somereallylongsecretkey
 JWT_GIFT_SECRET=tptteagiftcard
 //NODE_ENV=development
 NODE_ENV=production
-DB_HOST=103.130.216.111
-DB_USERNAME=phonglon_tpteauser
-DB_PASSWORD=d5a71d86
-DB_NAME=phonglon_tptea
+DB_HOST=q0h7yf5pynynaq54.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_USERNAME=fkwfdclvfdf84yly
+DB_PASSWORD=n0deg36qluuw7l5l
+DB_NAME=y7xitegemi4f3xuq
 DEV_DB_HOST=localhost
 DEV_DB_USERNAME=root
 DEV_DB_PASSWORD=admin
